Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1342

Misspelling in MacOSUnicodeConverter::fgMacLCPEncodingName

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 2.6.0
    • None
    • Utilities
    • None
    • Xerces CVS 2005-02-10

    Description

      The character 'n' is missing in the definition of MacOSUnicodeConverter::fgMacLCPEncodingName in file src/xerxes-c/util/Transcoders/MacOSUnicodeConverter/MacOSUnicodeConverter.cpp.

      Attachments

        Activity

          People

            jberry@apache.org James Berry
            sletz sletz
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: