Fix spelling of fgMacLCPEncodingName. Thanks Stefan Letz. Bug XERCESC-1342. Also, change existence test for unicode collator to UCCompareText.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@176308 13f79535-47bb-0310-9956-ffa450edef68